# learn-express-exquitec-2026

./: .env  .gitignore  database.sqlite  heroes.db  heros.db  package-lock.json  package.json  stream_app.py
js_web/: database.sqlite  index.js  package-lock.json  package.json
js_web/src/: main.js
js_web/src/config/: cache.config.js
js_web/src/controller/: auth.controller.js
js_web/src/routes/: auth.routes.js
js_web/src/services/: index.js
js_web/src/services/user/: User.js
py_web/: .gitignore  heroes.db  heros.db  init.py  package-lock.json  pyproject.toml  requirements.txt
py_web/src/: app.py
py_web/src/config/: db.py  env.py  jwt.py
py_web/src/http/controllers/: auth.py
py_web/src/http/dtos/: auth_dto.py  forgot_password_dto.py
py_web/src/http/middlewares/: auth_middleware.py
py_web/src/internal/models/: user.py
py_web/src/utils/: parse_time_string.py
src/: app.py  main.js
src/config/: db.config.js  db.py  env.py  jwt.config.js  jwt.py
src/controller/: auth.controller.js
src/http/controllers/: auth.py
src/http/middlewares/: auth_middleware.py
src/middlewares/: auth.middleware.js
src/models/: init.py  user.py
src/routes/: auth.routes.js
src/utils/: password-hash.js
